
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int errno ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 int perror (char const*) ;
 int stdout ;

void do_exit( const char *str , const char *file , unsigned int line )
{
        fprintf( stdout , "\n" );
        if( file != ((void*)0) && line != 0 )
                fprintf( stdout , "Error at %s at line %d\n" , file , line );

        if( str != ((void*)0) )
                perror( str );

        exit( -errno );
}
